# testing-rust-grpc

./: Cargo.toml  README.md  build.rs  cargo-expand-bin-server.rs  m4  response.out
generated-code/: hello.rs
proto/: person.proto
src/: client.rs  main.rs  protobuf_serialization_without_grpc.rs
