[package]
name = "grpc1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "nogrpc"
path = "src/protobuf_serialization_without_grpc.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.12"
